Inserindo evento de preload na pagina master do projeto

--- a/WingtipToys/Site.Master
+++ b/WingtipToys/Site.Master
@@ -55,6 +55,7 @@
                         <li><a runat="server" href="~/About">Sobre</a></li>
                         <li><a runat="server" href="~/Contact">Contato</a></li>
                         <li><a runat="server" href="~/ProductList">Produtos</a></li>
+                        <li><a runat="server" href="~/ShoppingCart" ID="cartCount">&nbsp;</a></li>
                     </ul>
                 </div>
             </div>
